Se añadió la base de datos SQL

--- a/acercade.html
+++ b/acercade.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="wrapper">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/"
+            <a href="index.html"
                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <span class="fs-4">Gestor de Productos</span>
             </a>
@@ -30,9 +30,10 @@
                     eficiente.
                     Con esta herramienta, puedes agregar, editar, eliminar y visualizar productos de forma sencilla y
                     rápida.
-                    Nuestra misión es proporcionar una solución intuitiva y fácil de usar para que puedas mantener un
-                    control
-                    completo sobre tus productos y optimizar tu negocio.
+                    Desarrollado por Andres Moreno para la materia de Programacion Web utilizando HTML5, CSS (Bootstrap 5),
+                    Javascript, PHP y Mysql.
+                    Este proyecto se encuentra disponible en <a
+                        href="https://github.com/andresmtataseo/Gestor-Productos" target="_blank">Github</a>.
             </div>
         </div>
 
