--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="wrapper">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/"
+            <a href="index.html"
                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <span class="fs-4">Gestor de Productos</span>
             </a>
