--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             </div>
         </div>
 
+        <div id="alertContainer" class="container mt-3"></div>
+
         <div class="content">
             <table class="table table-striped">
                 <thead>
